simulation-scripts/scenario/identity-theft/apply/00-namespaces.yaml
#
apiVersion: v1
kind: Namespace
metadata:
  name: public
  labels:
    ns: public
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    ns: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: public-services
  labels:
    ns: public-services
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    ns: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: private-services
  labels:
    ns: private-services
---
apiVersion: v1
kind: Namespace
metadata:
  name: dex
  labels:
    ns: dex
---
