simulation-scripts/scenario/identity-theft/apply/07-public.yaml
apiVersion: v1
kind: Pod
metadata:
  name: public-terminal
  namespace: public
  labels:
    app: terminal
spec:
    serviceAccountName: elitehexor
    containers:
    - name: hacker-prompt
      # image: docker.io/controlplaneoffsec/identity-theft:public-terminal
      image: ttl.sh/wakeward-0438sdf9-3424erf-pt:12h
      command: ["sleep", "2d"]
      securityContext:
        allowPrivilegeEscalation: false
    restartPolicy: Always
