simulation-scripts/scenario/identity-theft/apply/04-secret-store.yaml
apiVersion: v1
kind: Service
metadata:
  name: secret-store
  namespace: private-services
spec:
  selector:
    app: secret-store
  ports:
  - port: 5050
    targetPort: 5050
    protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: secret-store
  namespace: private-services
  labels:
    app: secret-store
spec:
    containers:
    - name: secret-store
      image: docker.io/controlplaneoffsec/identity-theft:secret-store
      ports:
      - containerPort: 5050
        name: http
