simulation-scripts/scenario/identity-theft/apply/03-dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
  namespace: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      containers:
      - image: ghcr.io/dexidp/dex:v2.32.0
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
        ports:
        - name: http
          containerPort: 5556
        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
        readinessProbe:
          httpGet:
            path: /dex/.well-known/openid-configuration
            port: 5556
            scheme: HTTP
      volumes:
      - name: config
        configMap:
          name: dex
          items:
          - key: config.yaml
            path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
  selector:
    app: dex
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dex-private
spec:
  podSelector:
    matchLabels:
      app: dex
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: private-services
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dex-frontend
spec:
  podSelector:
    matchLabels:
      app: dex
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: frontend
