simulation-scripts/scenario/identity-theft/apply/03-yamlidator.yaml
apiVersion: v1
kind: Service
metadata:
  name: yamlidator
  namespace: public-services
spec:
  ports:
  - name: yamlidator
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: yamlidator
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: yamlidator
  name: yamlidator
  namespace: public-services
spec:
    serviceAccountName: yamlidator
    containers:
    - name: yamlidator
    # image: docker.io/controlplaneoffsec/identity-theft:yamlidator
      image: ttl.sh/wakeward-9834jgd-ymld:12h
      ports:
      - containerPort: 5000
        name: http
      volumeMounts:
      - mountPath: /mnt/
        name: yaml
    volumes:
    - hostPath:
        path: /mnt
        type: Directory
      name: yaml
    restartPolicy: Always
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: yamlidator
spec:
  podSelector:
    matchLabels:
      app: yamlidator
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: frontend
