simulation-scripts/scenario/identity-theft/apply/04-secretstore-pgsql.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgsql
  namespace: backend
spec:
  selector:
    app: pgsql
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Pod
metadata:
  name: pgsql
  namespace: backend
  labels:
    app: pgsql
spec:
    containers:
    - name: postgresql
      image: postgres:alpine3.18
      ports:
      - containerPort: 5432
        name: db
      volumeMounts:
        - mountPath: /data
          name: cache-volume
    volumes:
      - name: cache-volume
        emptyDir: {}
    restartPolicy: Always
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pgsql
spec:
  podSelector:
    matchLabels:
      app: pgsql
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: secret-store
